# ResourceGen

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  ResourceGen.cpp
src/GUI/: PreviewImage.h  ResourceApp.cpp  ResourceApp.h  ResourceFrame.cpp  ResourceFrame.h  ResourceItem.h  ResourceManifest.cpp  ResourceManifest.h  ResourceSourceGen.h
